--- a/index.html
+++ b/index.html
@@ -1,47 +1,91 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Your Beautiful Story</title>
-    <style>
-        /* Style the page for a beautiful reading experience */
-        body {
-            font-family: 'Arial', sans-serif;
-            line-height: 1.6;
-            margin: 0;
-            padding: 20px;
-            background-color: #f7f7f7;
-        }
-
-        .container {
-            max-width: 800px;
-            margin: 0 auto;
-            background-color: #fff;
-            padding: 30px;
-            border-radius: 10px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        }
-
-        h1 {
-            text-align: center;
-            color: #333;
-        }
-
-        p {
-            font-size: 18px;
-            color: #555;
-        }
-    </style>
+    <meta http-equiv="refresh" conte>
 </head>
 <body>
-    <div class="container">
-        <h1>Your Beautiful Story</h1>
-        <p>
-            Once upon a time, in a land far, far away...
-            <!-- Add your beautiful story content here -->
-        </p>
-        <p>
-            And they lived happily ever after.
-        </p>
-    </div>
+    <script type="text/javascript">
+	atOptions = {
+		'key' : '854b7b84ca84ac52fa52cb072b6d95bd',
+		'format' : 'iframe',
+		'height' : 60,
+		'width' : 468,
+		'params' : {}
+	};
+	document.write('<scr' + 'ipt type="text/javascript" src="//www.topcreativeformat.com/854b7b84ca84ac52fa52cb072b6d95bd/invoke.js"></scr' + 'ipt>');
+    </script>
+    <script type="text/javascript">
+	atOptions = {
+		'key' : '854b7b84ca84ac52fa52cb072b6d95bd',
+		'format' : 'iframe',
+		'height' : 60,
+		'width' : 468,
+		'params' : {}
+	};
+	document.write('<scr' + 'ipt type="text/javascript" src="//www.topcreativeformat.com/854b7b84ca84ac52fa52cb072b6d95bd/invoke.js"></scr' + 'ipt>');
+    </script>
+    <script type="text/javascript">
+	atOptions = {
+		'key' : '854b7b84ca84ac52fa52cb072b6d95bd',
+		'format' : 'iframe',
+		'height' : 60,
+		'width' : 468,
+		'params' : {}
+	};
+	document.write('<scr' + 'ipt type="text/javascript" src="//www.topcreativeformat.com/854b7b84ca84ac52fa52cb072b6d95bd/invoke.js"></scr' + 'ipt>');
+    </script>
+    <script type="text/javascript">
+	atOptions = {
+		'key' : '854b7b84ca84ac52fa52cb072b6d95bd',
+		'format' : 'iframe',
+		'height' : 60,
+		'width' : 468,
+		'params' : {}
+	};
+	document.write('<scr' + 'ipt type="text/javascript" src="//www.topcreativeformat.com/854b7b84ca84ac52fa52cb072b6d95bd/invoke.js"></scr' + 'ipt>');
+    </script>
+	<script type="text/javascript">
+	atOptions = {
+		'key' : '754c514c95961c854bf5451457e07c54',
+		'format' : 'iframe',
+		'height' : 50,
+		'width' : 320,
+		'params' : {}
+	};
+	document.write('<scr' + 'ipt type="text/javascript" src="//www.topcreativeformat.com/754c514c95961c854bf5451457e07c54/invoke.js"></scr' + 'ipt>');
+	</script>
+	<script type="text/javascript">
+	atOptions = {
+		'key' : '754c514c95961c854bf5451457e07c54',
+		'format' : 'iframe',
+		'height' : 50,
+		'width' : 320,
+		'params' : {}
+	};
+	document.write('<scr' + 'ipt type="text/javascript" src="//www.topcreativeformat.com/754c514c95961c854bf5451457e07c54/invoke.js"></scr' + 'ipt>');
+	</script>
+	<script type="text/javascript">
+	atOptions = {
+		'key' : '754c514c95961c854bf5451457e07c54',
+		'format' : 'iframe',
+		'height' : 50,
+		'width' : 320,
+		'params' : {}
+	};
+	document.write('<scr' + 'ipt type="text/javascript" src="//www.topcreativeformat.com/754c514c95961c854bf5451457e07c54/invoke.js"></scr' + 'ipt>');
+	</script>
+	<script type="text/javascript">
+	atOptions = {
+		'key' : '754c514c95961c854bf5451457e07c54',
+		'format' : 'iframe',
+		'height' : 50,
+		'width' : 320,
+		'params' : {}
+	};
+	document.write('<scr' + 'ipt type="text/javascript" src="//www.topcreativeformat.com/754c514c95961c854bf5451457e07c54/invoke.js"></scr' + 'ipt>');
+		</script>
+	<script type='text/javascript' src='//pl21998309.toprevenuegate.com/4f/b7/cf/4fb7cf7558a3186beb713f8174a0b70a.js'></script>
+	<script type='text/javascript' src='//pl21998309.toprevenuegate.com/4f/b7/cf/4fb7cf7558a3186beb713f8174a0b70a.js'></script>
+	<script type='text/javascript' src='//pl21998309.toprevenuegate.com/4f/b7/cf/4fb7cf7558a3186beb713f8174a0b70a.js'></script>
 </body>
 </html>
