--- a/index.html
+++ b/index.html
@@ -1,9 +1,34 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta http-equiv="refresh" conte>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <style>
+	  /* Reset default margin and padding for all elements */
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+/* Apply styles to the container */
+.container {
+    width: 100%; /* Take full width of the viewport */
+    max-width: 1200px; /* Limit maximum width */
+    margin: 0 auto; /* Center the container */
+    padding: 20px; /* Add padding */
+}
+
+/* Responsive styles for various screen sizes */
+@media screen and (max-width: 768px) {
+    /* Adjust styles for smaller screens */
+    .container {
+        padding: 10px; /* Modify padding for smaller screens */
+    }
+}
+  </style>
 </head>
 <body>
+    <div class="container">
     <script type="text/javascript">
 	atOptions = {
 		'key' : '854b7b84ca84ac52fa52cb072b6d95bd',
@@ -84,6 +109,7 @@
 	};
 	document.write('<scr' + 'ipt type="text/javascript" src="//www.topcreativeformat.com/754c514c95961c854bf5451457e07c54/invoke.js"></scr' + 'ipt>');
 		</script>
+    </div>
 	<script type='text/javascript' src='//pl21998309.toprevenuegate.com/4f/b7/cf/4fb7cf7558a3186beb713f8174a0b70a.js'></script>
 	<script type='text/javascript' src='//pl21998309.toprevenuegate.com/4f/b7/cf/4fb7cf7558a3186beb713f8174a0b70a.js'></script>
 	<script type='text/javascript' src='//pl21998309.toprevenuegate.com/4f/b7/cf/4fb7cf7558a3186beb713f8174a0b70a.js'></script>
